--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "tailwindcss": "^3.4.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "vue3-google-map": "^0.20.0"
+    "vue3-google-map": "^0.20.0",
+    "vue3-touch-events": "^4.1.8"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
