--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
     "vue": "^3.4.21",
+    "vue-google-autocomplete": "^1.1.4",
     "vue-router": "^4.3.0",
     "vue3-google-map": "^0.20.0",
     "vue3-touch-events": "^4.1.8"
