--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.19",
     "pinia": "^2.1.7",
     "postcss": "^8.4.38",
+    "seedrandom": "^3.0.5",
     "tailwindcss": "^3.4.1",
     "vue": "^3.4.21",
     "vue-google-autocomplete": "^1.1.4",
