--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/vue-fontawesome": "latest-3",
     "@unhead/vue": "^1.9.5",
     "autoprefixer": "^10.4.19",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
     "postcss": "^8.4.38",
     "seedrandom": "^3.0.5",
