--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "seedrandom": "^3.0.5",
     "tailwindcss": "^3.4.1",
     "vue": "^3.4.21",
+    "vue-draggable-next": "^2.2.1",
     "vue-google-autocomplete": "^1.1.4",
     "vue-router": "^4.3.0",
     "vue3-google-map": "^0.20.0",
